# pico-presencemonitor

./: README.md
micro/: CMakeLists.txt  counter.c  utils.h
micro/libs/pico-ssd1306/: CMakeLists.txt
server/: compose.yaml  package-lock.json  package.json
server/dashboard/: query.flux  settings.json
server/src/: env.ts  main.ts
